HW6 heder+inner

--- a/guide.html
+++ b/guide.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Landing</title>
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:300i,400" rel="stylesheet"> 
-    <title>Landing</title>
     <!-- ET-LINE ICONS -->
     <link rel="stylesheet" href="css/et-line.css">
     <!-- FONT_AWESOM -->
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="title section-title">
             <span>default section title</span>
-          </div>
+        </div>
           <!-- /title section-title -->
         <div class="title section-title-light">
           <span>default section title light</span>
@@ -30,13 +30,26 @@
         <!-- /title section-title-light -->
       </div>
       <!-- /container -->
+      <div class="container-fluid">
+        <div class="title section-title">
+          <span>default section title container-fluid</span>
+        </div>  
+      </div>
+      <!-- /container-fluid -->
     </div>
     <!-- /default-section -->
     <!-- SMALL SECTION -->
     <div class="small-section bg-black">
       <div class="container">
         <div class="title title-white section-title-light text-center">
-          <span>Default white title</span>
+          <span>Default white title small section text center bg black</span>
+        </div>
+      </div>
+    </div>
+    <div class="small-section bg-gray">
+      <div class="container">
+        <div class="title title-white section-title-light text-center">
+          <span>Default white title small section bg grey</span>
         </div>
       </div>
     </div>
