--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Landing</title>
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:300i,400" rel="stylesheet"> 
-    <title>Landing</title>
     <!-- ET-LINE ICONS -->
     <link rel="stylesheet" href="css/et-line.css">
     <!-- FONT_AWESOM -->
@@ -14,6 +14,52 @@
 		<link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-
+    <!-- ===== HEADER START ===== -->
+    <div class="header">
+      <div class="container-fluid">
+        <div class="logo">
+          <a href="#">
+            <img src="img/logo.png" alt="Logo">
+          </a>
+        </div>
+        <!-- /logo -->
+        <ul class="header-nav">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Services</a>
+          </li>
+          <li>
+            <a href="#">Works</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+        <!-- /header-nav -->
+      </div>
+      <!-- /container-fluid -->
+    </div>
+    <!-- /header -->
+    <!-- ===== HEADER END ===== -->
+    <!-- ===== MAIN START ===== -->
+    <div class="main">
+      <div class="inner">
+        <div class="inner-content">
+          <h1>Thomas Rhythm</h1>
+          <span>Extraordinary art director & creative minimalism lover</span>
+        </div>
+        <!-- /inner-content -->
+      </div>
+      <!-- /inner -->
+    </div>
+      <p>Lorem ipsum dolor, <br> sit amet consectetur adipisicing elit. Dignissimos, facere delectus. Odio recusandae reiciendis iste neque? Ipsam <br> blanditiis perferendis culpa, necessitatibus esse, quaerat, architecto consequuntur suscipit consectetur <br> ut est cupiditate.</p>
+      <p>Lorem ipsum dolor, <br> sit amet consectetur adipisicing elit. Dignissimos, facere delectus. Odio recusandae reiciendis iste neque? Ipsam <br> blanditiis perferendis culpa, necessitatibus esse, quaerat, architecto consequuntur suscipit consectetur <br> ut est cupiditate.</p>
+    <!-- /main -->
+    <!-- ===== MAIN END ===== -->
   </body>
 </html>
