add ABOUT STUDIO + start WHY CHOOSE US

--- a/guide.html
+++ b/guide.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/et-line.css">
     <!-- FONT_AWESOM -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!-- GRID Style -->
+    <link rel="stylesheet" href="css/grid.css">
 		<!-- Custom style -->
 		<link rel="stylesheet" href="css/style.css">
   </head>
@@ -88,6 +90,58 @@
             <button class="btn btn-default btn-xs">XS Buttons</button>
         </div>
       </div>
-      <!-- /BUTTONS -->
+    <!-- /BUTTONS -->
+    <!-- GRID COLUMNS -->
+    <div class="default-section">
+      <div class="container">
+        <div class="title section-title-light">
+          <span>Default GRID</span>
+        </div>
+        <div class="row">
+          <div class="col col-6">
+            <p class="default-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas vero, maiores nulla iste eveniet architecto accusamus illo fugit quis? Earum esse aliquid aut corrupti temporibus et quidem ipsam delectus. Harum.
+            </p>
+          </div>
+          <div class="col col-6">
+            <p class="default-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas vero, maiores nulla iste eveniet architecto accusamus illo fugit quis? Earum esse aliquid aut corrupti temporibus et quidem ipsam delectus. Harum.
+            </p>
+          </div>
+        </div>
+        <!-- /row -->
+        <div class="row">
+          <div class="col col-3">
+            <p class="default-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni qui dolorem nulla! Ullam labore reiciendis nobis animi a soluta assumenda omnis unde provident quae. Ab provident cumque ullam esse quaerat.</p>
+          </div>
+          <div class="col col-3">
+            <p class="default-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, eius distinctio enim delectus ratione placeat sed expedita adipisci quod, tenetur eveniet error sequi quaerat dolores debitis sunt, tempora commodi velit.</p>
+          </div>
+          <div class="col col-3">
+            <p class="default-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores delectus magnam vero modi optio animi quia consectetur ratione atque, accusantium dolor quidem illo, sunt blanditiis aut illum necessitatibus id? Et.</p>
+          </div>
+          <div class="col col-3">
+            <p class="default-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, vero. Unde, officiis quia. Aperiam, ex nostrum recusandae nobis veritatis officiis quo, laborum deserunt voluptas et minima atque, libero impedit eaque.</p>
+          </div>
+        </div>
+        <!-- /row -->
+        <div class="row">
+          <div class="col col-4">
+            <blockquote>
+              <p>Design is not making beauty, beauty emerges from selection, affinities, integration, love.
+              </p>
+              <span>— Louis Kahn</span>
+            </blockquote>
+          </div>
+          <div class="col col-4">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, delectus! Nam iure qui omnis sit nihil ex eligendi debitis aut atque corporis ratione voluptate sint quidem cupiditate, maiores earum consectetur.</p>
+          </div>
+          <div class="col col-4">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem voluptate alias quasi quo quaerat, incidunt tenetur iste, maiores aspernatur veniam nihil sequi eveniet cum sunt accusantium adipisci. Nam, quos itaque.</p>
+          </div>
+        </div>
+        <!-- /row -->
+      </div>
+      <!-- /container -->
+    </div>  
+    <!-- /GRID COLUMNS -->
   </body>
 </html>
