--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/et-line.css">
     <!-- FONT_AWESOM -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!-- GRID Style -->
+    <link rel="stylesheet" href="css/grid.css">
 		<!-- Custom style -->
 		<link rel="stylesheet" href="css/style.css">
   </head>
@@ -56,9 +58,168 @@
         <!-- /inner-content -->
       </div>
       <!-- /inner -->
+      <!-- ABOUT STUDIO -->
+      <div class="default-section about-studio">
+        <div class="container">
+          <div class="title section-title">
+            <span>About studio</span>
+          </div>
+          <!-- /title -->
+          <div class="row">
+            <div class="col col-4">
+              <blockquote>
+                <p>Design is not making beauty, beauty emerges from selection, affinities, integration, love.
+                </p>
+                <span>— Louis Kahn</span>
+              </blockquote>
+            </div>
+            <!-- /col -->
+            <div class="col col-4">
+              <p class="default-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, delectus! Nam iure qui omnis sit nihil ex eligendi debitis aut atque corporis ratione voluptate sint quidem cupiditate, maiores earum consectetur.</p>
+            </div>
+            <!-- /col -->
+            <div class="col col-4">
+              <p class="default-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem voluptate alias quasi quo quaerat, incidunt tenetur iste, maiores aspernatur veniam nihil sequi eveniet cum sunt accusantium adipisci. Nam, quos itaque.</p>
+            </div>
+            <!-- /col -->
+          </div>
+          <!-- /row -->
+          <div class="team-wrapper">
+            <div class="row">
+              <div class="col col-4">
+                <div class="team-item">
+                  <div class="team-item-img">
+                    <img src="img/thomas-rhythm.jpg" alt="Thomas Rhythm">
+                    <div class="team-item-skills">
+                      <div class="team-item-skills-content">
+                        <span class="skills-heading">Skills</span>
+                        <span class="skills-text">Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta.</span>
+                        <div class="progress-bars-section">
+                          <!-- Branding -->
+                          <span class="progress-bar-heading">Branding</span>
+                          <div class="skills-progress-bar">
+                            <div class="progress-bar-value branding"></div>
+                          </div>
+                          <!-- / Branding-->
+                          <!-- Design -->
+                          <span class="progress-bar-heading">Design</span>
+                          <div class="skills-progress-bar">
+                            <div class="progress-bar-value design"></div>
+                          </div>
+                          <!-- / Design -->
+                          <!-- Development -->
+                          <span class="progress-bar-heading">Development</span>
+                          <div class="skills-progress-bar">
+                            <div class="progress-bar-value development"></div>
+                          </div>
+                          <!-- / Development -->
+                          <!-- Photography -->
+                          <span class="progress-bar-heading">Photography</span>
+                          <div class="skills-progress-bar">
+                            <div class="progress-bar-value photography"></div>
+                          </div>
+                          <!-- / Photography -->
+                          <!-- /skills-progress-bar -->
+                        </div>
+                        <!-- /skills-bars-section -->
+                      </div>
+                    </div>
+                    <!-- /team-item-skills -->
+                  </div>
+                  <!-- /team-item-img -->
+                  <div class="team-item-info">
+                    <span class="team-item-name">Thomas Rhythm</span>
+                    <span class="team-item-role">Art Director</span>
+                  </div>
+                  <!-- /team-item-info -->
+                </div>
+                <!-- /team-item -->
+              </div>
+              <!-- /col -->
+              <div class="col col-4">
+                <div class="team-item">
+                  <div class="team-item-img">
+                    <img src="img/marta-laning.jpg" alt="Marta Laning">
+                  </div>
+                  <!-- /team-item-img -->
+                  <div class="team-item-info">
+                    <span class="team-item-name">Marta Laning</span>
+                    <span class="team-item-role">Web engineer</span>
+                  </div>
+                  <!-- /team-item-info -->
+                </div>
+                <!-- /team-item -->
+              </div>
+              <!-- /col -->
+              <div class="col col-4">
+                <div class="team-item">
+                  <div class="team-item-img">
+                    <img src="img/steve-anders.jpg" alt="Steve Anders">
+                  </div>
+                  <!-- /team-item-img -->
+                  <div class="team-item-info">
+                    <span class="team-item-name">Steve Anders</span>
+                    <span class="team-item-role">Developer</span>
+                  </div>
+                  <!-- /team-item-info -->
+                </div>
+                <!-- /team-item -->
+              </div>
+              <!-- /col -->
+            </div>
+            <!-- /row -->
+          </div>
+          <!-- /ream-wrapper -->
+        </div>
+        <!-- /container -->
+      </div>
+      <!-- /ABOUT STUDIO -->
+      <!-- Why Choose Us? -->
+      <div class="default-section services">
+        <div class="container">
+          <div class="title section-title text-center">
+              <span>Why Choose Us?</span>
+            </div>
+            <!-- /title -->
+            <div class="row">
+              <div class="col col-4">
+                <div class="why-choose-us-item">
+                  <div class="why-choose-us-item-img text-center">
+                      <span class="icon-flag"></span>
+                  </div>
+                  <!-- / why-choose-us-item-img -->
+                  <div class="why-choose-us-item-content">
+                    <span class="why-choose-us-item-heading text-center">We’re Creative</span>
+                    <span class="default-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim.</span>
+                  </div>
+                  <!-- / why-choose-us-item-content -->
+                </div>
+                <!-- / why-choose-us-item -->
+              </div>
+              <!-- / col -->
+              <div class="col col-4">
+                <div class="why-choose-us-item">
+                  <div class="why-choose-us-item-img text-center">
+                      <span class="icon-clock"></span>
+                  </div>
+                  <!-- / why-choose-us-item-img -->
+                  <div class="why-choose-us-item-content">
+                    <span class="why-choose-us-item-heading text-center">We’re Punctual</span>
+                    <span class="default-text">Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend, lorem fermentum orci sit amet, iaculis libero.</span>
+                  </div>
+                  <!-- / why-choose-us-item-content -->
+                </div>
+                <!-- / why-choose-us-item -->
+              </div>
+              <!-- / col -->
+            </div>
+            <!-- / row -->
+        </div>
+        <!-- / container -->
+      </div>
+      <!-- / Why Choose Us? -->
     </div>
-      <p>Lorem ipsum dolor, <br> sit amet consectetur adipisicing elit. Dignissimos, facere delectus. Odio recusandae reiciendis iste neque? Ipsam <br> blanditiis perferendis culpa, necessitatibus esse, quaerat, architecto consequuntur suscipit consectetur <br> ut est cupiditate.</p>
-      <p>Lorem ipsum dolor, <br> sit amet consectetur adipisicing elit. Dignissimos, facere delectus. Odio recusandae reiciendis iste neque? Ipsam <br> blanditiis perferendis culpa, necessitatibus esse, quaerat, architecto consequuntur suscipit consectetur <br> ut est cupiditate.</p>
     <!-- /main -->
     <!-- ===== MAIN END ===== -->
   </body>
