add services, portfolio, latest news

--- a/guide.html
+++ b/guide.html
@@ -43,7 +43,7 @@
     <!-- SMALL SECTION -->
     <div class="small-section bg-black">
       <div class="container">
-        <div class="title title-white section-title-light text-center">
+        <div class="title title-white section-title-lite text-center">
           <span>Default white title small section text center bg black</span>
         </div>
       </div>
