add lets-talk, subscribe

--- a/guide.html
+++ b/guide.html
@@ -23,13 +23,13 @@
             <span>default section title</span>
         </div>
           <!-- /title section-title -->
-        <div class="title section-title-light">
-          <span>default section title light</span>
+        <div class="title section-title-lite">
+          <span>default section title lite</span>
         </div>
-        <div class="title section-title-light text-right">
-          <span>default section title light text right</span>
+        <div class="title section-title-lite text-right">
+          <span>default section title lite text right</span>
         </div>
-        <!-- /title section-title-light -->
+        <!-- /title section-title-lite -->
       </div>
       <!-- /container -->
       <div class="container-fluid">
@@ -50,7 +50,7 @@
     </div>
     <div class="small-section bg-gray">
       <div class="container">
-        <div class="title title-white section-title-light text-center">
+        <div class="title title-white section-title-lite text-center">
           <span>Default white title small section bg grey</span>
         </div>
       </div>
@@ -71,7 +71,7 @@
     <!-- ICONS -->
     <div class="default-section">
       <div class="container">
-        <div class="title section-title-light text-center">
+        <div class="title section-title-lite text-center">
           <span>Default icons</span>
         </div>
         <span class="icon-heart"></span>
@@ -82,7 +82,7 @@
     <!-- BUTTONS -->
     <div class="default-section">
         <div class="container">
-          <div class="title section-title-light text-center">
+          <div class="title section-title-lite text-center">
             <span>Default buttons</span>
           </div>
             <a href="#" class="btn btn-default">Def Button</a>
@@ -94,7 +94,7 @@
     <!-- GRID COLUMNS -->
     <div class="default-section">
       <div class="container">
-        <div class="title section-title-light">
+        <div class="title section-title-lite">
           <span>Default GRID</span>
         </div>
         <div class="row">
@@ -143,5 +143,29 @@
       <!-- /container -->
     </div>  
     <!-- /GRID COLUMNS -->
+    <!-- FORM ELEMENTS -->
+    <div class="default-section guide-section">
+      <div class="container">
+        <div class="title section-title-lite text-center">
+          <span>Form elenents</span>
+        </div>
+        <div class="row">
+          <div class="col col-6">
+            <form>
+              <input type="text" name="name" class="form-control" placeholder="NAME">
+              <input type="email" name="email" class="form-control" placeholder="EMAIL">
+              <textarea name="message" class="form-control" placeholder="MESSAGE"></textarea>
+              <input type="text" name="name" class="form-control" placeholder="DISABLED" disabled>
+              <input type="email" name="email" class="form-control" placeholder="EMAIL" value="EXAMPLE@MAIL.COM">
+              <input type="email" name="email" class="form-control error" placeholder="EMAIL">
+              <input type="submit" value="Send" class="btn btn-black">
+              <button type="submit" class="btn btn-black">Send message</button>
+              <button type="submit" class="btn btn-black" disabled>Disabled Send message</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- / FORM ELEMENTS -->
   </body>
 </html>
