--- a/index.html
+++ b/index.html
@@ -339,13 +339,23 @@
       </div>
       <!-- / SERVICES -->
       <!-- LETS TALK -->
-      <div class="default-section lets-talk bg-black">
+      <div class="lets-talk bg-black">
         <div class="container">
           <div class="row">
             <div class="col col-6">
-              <div class="title section-title-lite title-white">
-                <span>Looking for exclusive digital services?</span>
+              <div class="lets-talk-left-text">
+                <div class="title section-title-lite title-white">
+                  <span>Looking for exclusive digital services?</span>
+                </div>
+                <!-- / title -->
+                <p class="default-text">Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Integer non dapibus diam, ac eleifend lectus.</p>
+                <a class="btn btn-default" href="#">Lets talk</a>
               </div>
+              <!-- / lets-talk-left-text -->
+            </div>
+            <!-- / col -->
+            <div class="col col-6 text-right">
+              <img src="img/lets-talk-img.png" alt="Lets talk" class="lets-talk-img">
             </div>
             <!-- / col -->
           </div>
@@ -453,6 +463,17 @@
         <!-- / portfolio-tabs -->
       </div>
       <!-- / PORTFOLIO -->
+      <!-- Like Our Creative Works? -->
+      <div class="like-our-creative-works bg-black text-center">
+        <div class="container">
+          <div class="title section-title-lite title-white">
+            <span>Like Our Creative Works?</span>
+          </div>
+          <!-- / title -->
+          <a class="btn btn-default" href="#">Start Project</a>
+        </div>
+      </div>
+      <!-- / Like Our Creative Works? -->
       <!-- WHY CHOOSE US? -->
       <div class="default-section why-choose-us">
         <div class="container">
@@ -671,6 +692,25 @@
         <!-- / container -->
       </div>
       <!-- / LATEST NEWS -->
+      <!-- SUBSCRIBE -->
+      <div class="small-section bg-gray subscribe text-center">
+        <div class="container">
+          <div class="title section-title-lite">
+            <span>Stay informed with OUR NEWSLETTER</span>
+          </div>
+          <!-- / title -->
+          <form>
+            <input type="email" name="email" class="form-control" placeholder="Enter email here">
+            <button type="submit" class="btn btn-black">Subscribe</button>
+          </form>
+          <div class="form-info">
+            <span><i class="fa fa-info-circle" aria-hidden="true"></i> Please trust us, we will never send you spam</span>
+          </div>
+          <!-- / form-info -->
+        </div>
+        <!-- / container -->
+      </div>
+      <!-- / SUBSCRIBE -->
     </div>
     <!-- /main -->
     <!-- ===== MAIN END ===== -->
