add slider, footer

--- a/guide.html
+++ b/guide.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Landing</title>
     <!-- GOOGLE FONTS -->
-    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:300i,400" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <!-- ET-LINE ICONS -->
     <link rel="stylesheet" href="css/et-line.css">
     <!-- FONT_AWESOM -->
@@ -167,5 +168,63 @@
       </div>
     </div>
     <!-- / FORM ELEMENTS -->
+    <!-- ICONS -->
+    <div class="default-section guide-section grid-icons">
+      <div class="container">
+        <div class="title section-title-lite text-center">
+          <span>Icons</span>
+        </div>
+        <div class="row">
+          <div class="col col-4">
+            <div class="title section-title-lite">
+              <span>Black</span>
+            </div>
+            <div class="romb-icon black-icon">
+              <i class="fa fa-phone"></i>
+            </div>
+            <div class="romb-icon black-icon">
+              <i class="fa fa-map-marker"></i>
+            </div>
+            <div class="romb-icon black-icon">
+              <i class="fa fa-envelope-o"></i>
+            </div>
+          </div>
+          <!-- /col -->
+          <div class="col col-4">
+            <div class="title section-title-lite">
+              <span>Transparent</span>
+            </div>
+            <div class="romb-icon transparent-icon">
+              <i class="fa fa-phone"></i>
+            </div>
+            <div class="romb-icon transparent-icon">
+              <i class="fa fa-map-marker"></i>
+            </div>
+            <div class="romb-icon transparent-icon">
+              <i class="fa fa-envelope-o"></i>
+            </div>
+          </div>
+          <!-- /col -->
+          <div class="col col-4">
+            <div class="title section-title-lite">
+              <span>White</span>
+            </div>
+            <div class="bg-black">
+              <div class="romb-icon white-icon">
+                <i class="fa fa-phone"></i>
+              </div>
+              <div class="romb-icon white-icon">
+                <i class="fa fa-map-marker"></i>
+              </div>
+              <div class="romb-icon white-icon">
+                <i class="fa fa-envelope-o"></i>
+              </div>
+            </div>
+          </div>
+          <!-- /col -->
+        </div>
+      </div>
+    </div>
+    <!-- / ICONS -->
   </body>
 </html>
