add inner scroll down + fixes + readme.md

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
           <span>Extraordinary art director & creative minimalism lover</span>
         </div>
         <!-- /inner-content -->
+        <div class="arrow-down">
+          <div class="romb-icon white-icon">
+            <a href="#" data-scroll-to=".about-studio"><i class="fa fa-angle-down"></i></a>
+          </div>
+        </div>
+        <!-- / arrow-down -->
       </div>
       <!-- /inner -->
       <!-- ABOUT STUDIO -->
@@ -882,20 +888,26 @@
               </div>
               <!-- / contacts-items-wrapper -->
               <form class="contact-form">
-                <div class="form-col">
-                  <input type="text" name="user-name" id="user-name" class="form-control" placeholder="NAME">
-                  <input type="text" name="user-email" id="user-email" class="form-control" placeholder="EMAIL">
+                <div class="contact-form-row">
+                  <div class="form-col">
+                    <input type="text" name="user-name" id="user-name" class="form-control" placeholder="NAME">
+                    <input type="text" name="user-email" id="user-email" class="form-control" placeholder="EMAIL">
+                  </div>
+                  <!-- / form-col -->
+                  <div class="form-col">
+                    <textarea name="user-message" id="user-message" class="form-control" placeholder="MESSAGE"></textarea>
+                  </div>
+                  <!-- / form-col -->
                 </div>
-                <!-- / form-col -->
-                <div class="form-col">
-                  <textarea name="user-message" id="user-message" class="form-control" placeholder="MESSAGE"></textarea>
+                <!-- / contact-form-row -->
+                <div class="submit-form-row">
+                  <div class="form-info pull-left">
+                    <span><i class="fa fa-info-circle" aria-hidden="true"></i> All the fields are required</span>
+                  </div>
+                  <!-- / form-info -->
+                  <button type="submit" class="btn btn-black pull-right">Submit Message</button>
                 </div>
-                <!-- / form-col -->
-                <div class="form-info pull-left">
-                  <span><i class="fa fa-info-circle" aria-hidden="true"></i> All the fields are required</span>
-                </div>
-                <!-- / form-info -->
-                <button type="submit" class="btn btn-black pull-right">Submit Message</button>
+                <!-- / submit-form-row -->         
               </form>
               <!-- / contact-form -->
             </div>
